<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="Welcome to The Ultimate Music quiz!"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Are you a Beethoven or a Miley Cyrus?"
        android:layout_gravity="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edit_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="16sp"
        android:hint="Choose awesome artist name"
        android:textColor="@color/colorAccent"
        android:inputType="textMultiLine"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radioGroup1"
            android:layout_marginLeft="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:layout_marginLeft="12dp"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/jeff_Buckley"
                android:text="Jeff Buckley" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/amy_Winehouse"
                android:text="Amy Winehouse" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/jimi_Hendrix"
                android:text="Jimi Hendrix"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/brian_Jones"
                android:text="Brian Jones"
                android:layout_marginBottom="15dp"/>
        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12dp"
            android:id="@+id/radioGroup1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:layout_marginLeft="12dp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/home_Grown"
                android:text="Home grown" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/home_Bound"
                android:text="Home bound"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/always_Down"
                android:text="Always down"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/awful_Sound"
                android:text="An awful sound"
                android:layout_marginBottom="15dp"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:layout_marginLeft="12dp" />

            <CheckBox
                android:id="@+id/loved_CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="Love me do"/>

            <CheckBox
            android:id="@+id/paint_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="Paint it black"/>


            <CheckBox
                android:id="@+id/letter_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="The letter"/>

            <CheckBox
                android:id="@+id/lola_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="Lola"/>

            <CheckBox
                android:id="@+id/something_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="Something in the way she moves"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:layout_marginLeft="12dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/doors"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/the_doors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Write your answer here..."
            android:textSize="12sp"
            android:inputType="textCapWords"
            android:layout_margin="12dp"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radioGroup3"
            android:layout_marginLeft="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:layout_marginLeft="12dp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sergei"
                android:text="Sergei Prokofiev" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/igor"
                android:text="Igor Stravinsky" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vivaldi"
                android:text="Vivaldi"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pjotr"
                android:text="Pjotr Tschaikovsky"
                android:layout_marginBottom="15dp"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Check answers"
            android:onClick="submitAnswers"
            android:id="@+id/check_Answers"
            android:layout_marginBottom="12dp"
            android:textColor="@color/colorAccent"/>


</LinearLayout></ScrollView>

